# PhysicalQuantity

./: .gitignore  CMakeLists.txt  CSubString.natvis  PhysicalQuantity-IncludeLib.props  PhysicalQuantity.sln  PhysicalQuantity.vcxproj  PhysicalQuantity.vcxproj.filters  README.md  README.txt  RootDevDir.props  TestConsole.vcxproj  TestConsole.vcxproj.filters  config.mk  genhashtables.vcxproj  genhashtables.vcxproj.filters  main.cpp  makefile
include/: PhysicalQuantity.h  csubstr.h
include/PhysicalQuantity/: hash.h  ppOptions.h  ppOptions.h.in
msvc/: .gitignore  CSubString.natvis  PhysicalQuantity-IncludeLib.props  PhysicalQuantity.sln  PhysicalQuantity.vcxproj  PhysicalQuantity.vcxproj.filters  RootDevDir.props  TestConsole.vcxproj  TestConsole.vcxproj.filters  gencode.vcxproj  gencode.vcxproj.filters  genhashtables.vcxproj  genhashtables.vcxproj.filters  version.aps  version.rc
src/: PhysicalQuantity.cpp  PhysicalUnitDefinitions.cpp  TestConsole.cpp  csubstr.cpp  gencode.cpp  genhashtables.cpp  hash.cpp
